update: change URLs in menu and footer for improved navigation

--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
   <div class="footer-taxonomy">
     <div>
-      <a href="https://t.me/bmpi_group">{{ if (hasPrefix .RelPermalink "/en") }} Telegram {{ else }} 电报 {{ end }}</a>
+      <a href="https://www.myinvestpilot.com/">{{ if (hasPrefix .RelPermalink "/en") }} MyInvestPilot {{ else }} 策引 {{ end }}</a>
       ⚡️
-      <a href="https://discord.gg/S9mzJfqfKD">{{ if (hasPrefix .RelPermalink "/en") }} Discord {{ else }} Discord {{ end }}</a>
+      <a href="https://www.i365.tech/"> i365 </a>
       ⚡️
       <a href="/money/guide-to-open-global-investment-account/">{{ if (hasPrefix .RelPermalink "/en") }} Account {{ else }} 开户 {{ end }}</a>
       ⚡️
