update: replace brand ad links and text for improved relevance

--- a/themes/hugo-coder/layouts/money/single.html
+++ b/themes/hugo-coder/layouts/money/single.html
@@ -39,8 +39,8 @@
 
       <div class="brand-ad">
         <div class="brand-content">
-          <a href="/money/guide-to-open-global-investment-account/">
-            <span>点我在线阅读《全球投资开户完全指南：A股与美股篇》，零成本开启你的全球投资之旅。</span>
+          <a href="https://www.myinvestpilot.com/">
+            <span>如何做出更好的投资决策？</span>
           </a>
         </div>
         <div class="brand-ad-link"><a href="/_ad/" rel="nofollow">品牌赞助</a></div>
