--- a/themes/hugo-coder/layouts/self/single.html
+++ b/themes/hugo-coder/layouts/self/single.html
@@ -39,8 +39,8 @@
 
       <div class="brand-ad">
         <div class="brand-content">
-          <a href="https://www.i365.tech/post">
-            <span>点我在线阅读《个人产品开发指南》，教你从零到一快速开发自己的个人产品。</span>
+          <a href="https://www.myinvestpilot.com/">
+            <span>如何做出更好的投资决策？</span>
           </a>
         </div>
         <div class="brand-ad-link"><a href="/_ad/" rel="nofollow">品牌赞助</a></div>
